# aiuce-cognitive-orchestrator

./: README.md  pyproject.toml
aiuce_cognitive_orchestrator/: __init__.py  dag.py  laws.py  orchestrator.py  strategy.py
examples/: basic_usage.py
tests/: __init__.py  test_orchestrator.py
